fixed wrap issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
 body{ 
     background-color:lightyellow;
+    background-size: 10px 10px;
+    background-image:
+    linear-gradient(to right, lightgray, 2px, transparent 1px),
+    linear-gradient(to bottom, lightgrey 2px, transparent 1px);
 }
 
 header {
